--- a/cycletrack/app/src/main/res/values/strings.xml
+++ b/cycletrack/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">cycle track</string>
+    <string name="start_tracking">Track</string>
+    <string name="stop_tracking">Stop</string>
 </resources>
