--- a/cycletrack/app/src/main/res/values/strings.xml
+++ b/cycletrack/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">cycle track</string>
     <string name="start_tracking">Track</string>
     <string name="stop_tracking">Stop</string>
+    <string name="not_tracking">Not tracking</string>
+    <string name="tracking">Tracking</string>
+    <string name="writing">Writing</string>
+    <string name="written">Written</string>
+    <string name="no_location">No location information</string>
+    <string name="location_out_of_service">Location not available</string>
+    <string name="found_location">Location information found</string>
+    <string name="location_enabled">Location enabled</string>
+    <string name="location_disabled">Location disabled</string>
+    <string name="location_updated">Location updated at %1$s</string>
 </resources>
